--- a/Adventure/Views/Admin/Admin_Layout.cshtml
+++ b/Adventure/Views/Admin/Admin_Layout.cshtml
@@ -147,7 +147,7 @@
                                             else
                                             {
                                                 <div class="sidebar-userpic-name" style="margin-top:20px">
-                                                    尊享会员
+                                                    至尊会员
                                                 </div>
                                             }
                                         }
@@ -169,7 +169,7 @@
                                 <ul class="sub-menu">
                                     <li class="nav-item">
                                         <a href="~/Admin/checkMyHOrder" class="nav-link ">
-                                            <span class="title">查看订单</span>
+                                            <span class="title">查看我的民宿订单</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -184,7 +184,7 @@
                                 <ul class="sub-menu">
                                     <li class="nav-item">
                                         <a href="~/Admin/checkMyAOrder" class="nav-link ">
-                                            <span class="title">查看订单</span>
+                                            <span class="title">查看我的体验订单</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -198,13 +198,13 @@
                                 </a>
                                 <ul class="sub-menu">
                                     <li class="nav-item">
-                                        <a href="~/HomeStay/Release" class="nav-link ">
+                                        <a href="/HomeStay/Release" class="nav-link ">
                                             <!--TODO-->
                                             <span class="title">发布房源</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="~/HomeStay/Special" class="nav-link ">
+                                        <a href="/HomeStay/Special" class="nav-link ">
                                             <!--TODO-->
                                             <span class="title">增加房源特殊价格</span>
                                         </a>
@@ -215,12 +215,12 @@
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="~/Admin/ViewHomestaySpecial" class="nav-link ">
+                                        <a href="/Admin/ViewHomestaySpecial" class="nav-link ">
                                             <span class="title">查看房源实例</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="~/Admin/checkMyHomestayOrder" class="nav-link ">
+                                        <a href="/Admin/checkMyHomestayOrder" class="nav-link ">
                                             <span class="title">被预订的房源</span>
                                         </a>
                                     </li>
@@ -241,7 +241,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="/Admin/ViewActivity" class="nav-link ">
-                                            <span class="title">查看体验</span>
+                                            <span class="title">查看我发布的体验</span>
                                         </a>
                                     </li>
                                     <li class="nav-item">
@@ -251,7 +251,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="/Admin/checkMyActivityOrder" class="nav-link ">
-                                            <span class="title">被预订的体验</span>
+                                            <span class="title">查看被预订的体验</span>
                                             <span class="selected"></span>
                                         </a>
                                     </li>
