--- a/Adventure/Views/Admin/Comment.cshtml
+++ b/Adventure/Views/Admin/Comment.cshtml
@@ -72,6 +72,8 @@
                                         <textarea class="form-control" rows="10" maxlength="200" type="text" name="comment_content" id="" value=""></textarea>
                                         <input type="text" maxlength="50" class="form-control" name="orderID" placeholder="" hidden value="@ViewBag.orderID">
                                         <input type="text" maxlength="50" class="form-control" name="accessWay" placeholder="" hidden value="@ViewBag.accessWay">
+                                        <input type="text" maxlength="50" class="form-control" name="productID" placeholder="" hidden value="@ViewBag.productID">
+
                                     </div>
                                 </div>
                                 <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
