--- a/Adventure/Views/Blog/BlogDetail.cshtml
+++ b/Adventure/Views/Blog/BlogDetail.cshtml
@@ -57,7 +57,7 @@
     }
 </script>
 
-<div class="hero-wrap js-fullheight" style="background-image: url(../../images/bg_1.jpg);">
+<div class="hero-wrap js-fullheight" style="background-image: url(../images/bg_1.jpg);">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
@@ -181,7 +181,7 @@
                             <div class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
                                 <div class="form-group">
                                     <label for="content">内容</label>
-                                    <textarea class="blog-position form-control" maxlength="300" name="changeBlogContent" id="changeBlogContent" value="@ViewBag.CurrentBlog.content_s"></textarea>
+                                    <textarea class="blog-position form-control" maxlength="300" name="changeBlogContent" id="changeBlogContent">@ViewBag.CurrentBlog.content_s</textarea>
                                 </div>
                             </div>
                             <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
