--- a/Adventure/Views/Admin/checkMyHOrder.cshtml
+++ b/Adventure/Views/Admin/checkMyHOrder.cshtml
@@ -1,9 +1,41 @@
 ﻿
 @{
-    ViewBag.Title = "checkMyHOrder";
+    ViewBag.Title = "查看我的民宿订单";
     Layout = "~/Views/Admin/Admin_Layout.cshtml";
 }
 <script>
+    function deleteOrderedHomestay(orderID) {
+        var choice = confirm("是否确认删除该用户订单?提交后将不可更改。");//确认框。
+        if (choice == true) {
+            $.ajax({
+                type: "post",
+                url: "../Admin/CancelhomestayOrder",
+                data: {
+                    orderID: orderID
+                },
+                async: false,
+                dataType: 'json',
+                success: function (d) {
+                    var addState = d.isSuccess;
+                    if (addState == true) {//登录成功
+                        console.log(d);
+                        window.location.href = "/Admin/checkMyHOrder";
+                        alert("订单取消成功!");
+                    }
+                    else {
+                        //登录失败
+                        console.log(d);
+                        alert(d.message);
+                        window.location.href = "/Admin/checkMyHOrder";
+                    }
+                },
+                error: function (a) {
+                    console.log(a);
+                    alert("订单取消失败!");
+                }
+            });
+        }
+    }
 function reviewCheck(orderID) {
         $.ajax({
             type: "post",
@@ -83,28 +115,44 @@ function reviewCheck(orderID) {
                                         {
                                             for (int i = 0; i < ViewBag.returnList.Length; i++)
                                             {
-                                                <tr class="odd gradeX">
-                                                    <td class="center">@ViewBag.returnList[i].homestay_order_id</td>
-                                                    <td class="center">@ViewBag.returnList[i].customer_id</td>
-                                                    <td class="center">@ViewBag.returnList[i].create_time</td>
-                                                    <td class="center">@ViewBag.returnList[i].start_time</td>
-                                                    <td class="center">@ViewBag.returnList[i].end_time</td>
-                                                    <td class="center">@ViewBag.returnList[i].total_price</td>
-                                                    <td class="center">@ViewBag.returnList[i].platform_fee</td>
-                                                    <td class="center">@ViewBag.returnList[i].status</td>
-                                                    <td class="center">
-                                                        <a href="/Activity/SingleActivity?productID=@ViewBag.returnList[i].homestay_order_id" class="btn btn-tbl-edit btn-xs">
-                                                            <i class="fa fa-exclamation-circle"></i>
-                                                        </a>
-                                                        <a onclick="reviewCheck(@ViewBag.returnList[i].homestay_order_id)" class="btn btn-tbl-edit btn-xs">
-                                                            <i class="fa fa-pencil"></i>
-                                                        </a>
-                                                        <!--TODO:comment-->
-                                                        <a href="#" class="btn btn-tbl-delete btn-xs" onclick="">
-                                                            <i class="fa fa-trash-o "></i>
-                                                        </a>
-                                                    </td>
-                                                </tr>
+                                    <tr class="odd gradeX">
+                                        <td class="center">@ViewBag.returnList[i].homestay_order_id</td>
+                                        <td class="center">@ViewBag.returnList[i].customer_id</td>
+                                        <td class="center">@ViewBag.returnList[i].create_time</td>
+                                        <td class="center">@ViewBag.returnList[i].start_time</td>
+                                        <td class="center">@ViewBag.returnList[i].end_time</td>
+                                        <td class="center">@ViewBag.returnList[i].total_price</td>
+                                        <td class="center">@ViewBag.returnList[i].platform_fee</td>
+                                        @{ if (ViewBag.returnList[i].status == -2)
+                                            {
+                                                <td class="center">已取消</td>
+                                            }
+                                            else if (ViewBag.returnList[i].status == -1)
+                                            {
+                                                <td class="center">可取消</td>
+                                            }
+                                            else if (ViewBag.returnList[i].status == 0)
+                                            {
+                                                <td class="center">正在进行</td>
+                                            }
+                                            else
+                                            {
+                                                <td class="center">已完成</td>
+                                            }
+                                        }
+                                        <td class="center">
+                                            <a href="/HomeStay/StayInfo?productID=@ViewBag.returnList[i].homestay_id" class="btn btn-tbl-edit btn-xs">
+                                                <i class="fa fa-exclamation-circle"></i>
+                                            </a>
+                                            <a onclick="reviewCheck(@ViewBag.returnList[i].homestay_order_id)" class="btn btn-tbl-edit btn-xs">
+                                                <i class="fa fa-pencil"></i>
+                                            </a>
+                                            <!--TODO:comment-->
+                                            <a onclick="deleteOrderedHomestay(@ViewBag.returnList[i].homestay_order_id)" class="btn btn-tbl-delete btn-xs" >
+                                                <i class="fa fa-trash-o "></i>
+                                            </a>
+                                        </td>
+                                    </tr>
                                             }
                                         }
                                     }
