--- a/Adventure/Views/HomeStay/Index.cshtml
+++ b/Adventure/Views/HomeStay/Index.cshtml
@@ -6,12 +6,13 @@
     <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
             <div class="col-md-9 ftco-animate mb-5 pb-5 text-center text-md-left" data-scrollax=" properties: { translateY: '70%' }">
-                <h1 class="mb-4"  data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">精选民宿</h1>
-                <p   data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><b>尝试一下新的住宿体验？住进当地居民提供的房源，收获独家体验！</b></p>
+                <h1 class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">精选民宿</h1>
+                <p data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><b>尝试一下新的住宿体验？住进当地居民提供的房源，收获独家体验！</b></p>
             </div>
         </div>
     </div>
 </div>
+
 
 <section class="ftco-section justify-content-end ftco-search">
     <div class="container-wrap ml-auto">
@@ -36,7 +37,7 @@
                                         <label for="#">目的地</label>
                                         <div class="form-field">
                                             <div class="icon"><span class="icon-map-marker"></span></div>
-                                            <input type="text" name="destination" class="form-control" placeholder="您的目的地">
+                                            <input type="text" required name="destination" class="form-control" placeholder="您的目的地">
                                         </div>
                                     </div>
                                 </div>
@@ -45,7 +46,7 @@
                                         <label for="#">入住时间</label>
                                         <div class="form-field">
                                             <div class="icon"><span class="icon-map-marker"></span></div>
-                                            <input type="text" name="start_time" class="form-control checkin_date" placeholder="您的入住时间">
+                                            <input type="date" required id="hs-start" name="start_time" class="form-control" placeholder="您的入住时间">
                                         </div>
                                     </div>
                                 </div>
@@ -54,7 +55,7 @@
                                         <label for="#">退房时间</label>
                                         <div class="form-field">
                                             <div class="icon"><span class="icon-map-marker"></span></div>
-                                            <input type="text" name="end_time" class="form-control checkout_date" placeholder="您的退房时间">
+                                            <input type="date" required id="hs-end" name="end_time" class="form-control" placeholder="您的退房时间">
                                         </div>
                                     </div>
                                 </div>
@@ -94,7 +95,7 @@
                                         <label for="#">目的地</label>
                                         <div class="form-field">
                                             <div class="icon"><span class="icon-map-marker"></span></div>
-                                            <input type="text" name="destination" class="form-control" placeholder="您的目的地">
+                                            <input type="text" required name="destination" class="form-control" placeholder="您的目的地">
                                         </div>
                                     </div>
                                 </div>
@@ -103,7 +104,7 @@
                                         <label for="#">开始日期</label>
                                         <div class="form-field">
                                             <div class="icon"><span class="icon-map-marker"></span></div>
-                                            <input type="text" name="start_time" class="form-control checkin_date" placeholder="活动开始日期">
+                                            <input type="date" required id="act-start" name="start_time" class="form-control" placeholder="活动开始日期">
                                         </div>
                                     </div>
                                 </div>
@@ -112,7 +113,7 @@
                                         <label for="#">结束日期</label>
                                         <div class="form-field">
                                             <div class="icon"><span class="icon-map-marker"></span></div>
-                                            <input type="text" name="end_time" class="form-control checkout_date" placeholder="活动结束日期">
+                                            <input type="date" required id="act-end" name="end_time" class="form-control" placeholder="活动结束日期">
                                         </div>
                                     </div>
                                 </div>
@@ -148,6 +149,7 @@
         </div>
     </div>
 </section>
+
 <section class="ftco-section  testimony-section" style="background-image: url(../images/Favor_bg.jpg);background-color:transparent" data-stellar-background-ratio="0.5">
     <div class="container">
         <div class="row">
@@ -203,3 +205,24 @@
     </div>
 
 </section> <!-- .section -->
+<script>
+    $(function () {
+        var date = new Date();
+        var today = date.getFullYear();
+        today += "-";
+        today += date.getMonth() + 1 < 10 ? "0" + (date.getMonth() + 1) : (date.getMonth() + 1);
+        today += "-";
+        today += date.getDate() < 10 ? "0" + date.getDate() : date.getDate();
+        $('#hs-start').attr('min', today);
+        $('#hs-end').attr('min', today);
+        $('#act-start').attr('min', today);
+        $('#act-end').attr('min', today);
+
+        $('#act-start').change(function () {
+            $('#act-end').attr('min', $(this).val());
+        });
+        $('#hs-start').change(function () {
+            $('#hs-end').attr('min', $(this).val());
+        });
+    });
+</script>
